--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
-body {
-  font-family: sans-serif;
-  background-color: #f9fafb;
+html,body {
   margin: 0;
   padding: 0;
+  font-family: system-ui, Segoe UI, Roboto, Arial;
 }
+* {
+  box-sizing: border-box;
+}
+
