--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,4 @@
-html,body {
-  margin: 0;
-  padding: 0;
-  font-family: system-ui, Segoe UI, Roboto, Arial;
+body {
+  font-family: Arial, sans-serif;
+  margin: 20px;
 }
-* {
-  box-sizing: border-box;
-}
-
